--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
               <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed/NsreJI78UJA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
               <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed/fgZWFA8jIQI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
               </div>
- 　<style>
+ 　<!-- <style>
       .item {
        position: relative;
        width: 40%;
@@ -401,7 +401,7 @@
        width: 100% !important;
        height: 100% !important;
      }
-     </style>
+     </style> -->
             
            
 
