--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
             
         </div>
         <div class="info2">
+            <div class="snss">
             <a class="twitter-timeline" data-width="98%" data-height="100%" data-link-color="#830009" href="https://twitter.com/Edel_Rote_Jazz_?ref_src=twsrc%5Etfw">Tweets by Edel_Rote_Jazz_</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <div class="insta">
                 <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/Ca4V709LP8R/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; margin: 1px; padding:0; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
@@ -249,6 +250,7 @@
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
             </div> <!-- instaここまで -->
+            </div>
         </div> <!--info2-->
       </div>
 
