--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="snss">
             <a class="twitter-timeline" data-width="98%" data-height="100%" data-link-color="#830009" href="https://twitter.com/Edel_Rote_Jazz_?ref_src=twsrc%5Etfw">Tweets by Edel_Rote_Jazz_</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <div class="insta">
-                <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/Ca4V709LP8R/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style="max-width:160px; background:#FFF; border:0; border-radius:3px; margin: 1px; padding:0; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+                <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/Ca4V709LP8R/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style="background:#FFF; border:0; border-radius:3px; margin: 1px; padding:0; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                     <div style="padding:16px;">
                         <a href="https://www.instagram.com/p/Ca4V709LP8R/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                         <div style=" display: flex; flex-direction: row; align-items: center;">
