--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
 
           <div class="info1list">
           <ul class="info1all">
+              <!--ここからコピー-->
+              
+              <li class="infodate">
+                  <!-- 日付 -->
+                  2022/04/17
+                  <!--日付ここまで-->>
+              </li>
+              <li　class="infobun">
+                  <!--内容ここから-->
+                  HPリニューアルが完了し、TwitterやYouTubeがHP上でご覧いただけるようになりました。最新情報のご確認や過去の演奏会の閲覧にお役立てください。
+                  <!--内容ここまで。改行する時は<br>をつける。最後は不要-->
+                  <br></li>
+              <!--ここまでペーストして繰り返す-->
+              
               <!-- 日付 -->
               <li class="infodate">2022/04/14</li>
               <!-- 内容 -->
