--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -28,12 +28,11 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                5月8日(土)<br>
-                <s>5月12日(水)</s><br>
+                5月7日(土),11日(水)<br>
               </td>
               <td class="scheP">
                 <p>
-                <a href="https://www.instagram.com/tv/COm8aTRA9C5/?igshid=1tn51o179cgle">新入生歓迎インスタライブ</a>
+                  新入生歓迎インスタライブ
                 </p>
               </td>
             </tr>
@@ -41,11 +40,11 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                <s>9月1日(水)</s><br>
+                6月11日(土)<br>
               </td>
               <td class="scheP">
                 <p>
-                  <s>Summer Concert 2021<a href="./flyer/2021sc.JPG">(flyer)</a></s>
+                  名大祭　＠豊田講堂
                 </p>
               </td>
             </tr>
@@ -53,11 +52,11 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                9月1日~9月30日<br>
+                6月12日(日)<br>
               </td>
               <td class="scheP">
                 <p>
-                  新型コロナウイルス感染症の感染拡大により活動中止
+                  Be Happy Jazz Festival ＠パティオ池鯉鮒
                 </p>
               </td>
             </tr>
@@ -65,11 +64,11 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                <s>10月2日(土)</s><br>
+                7月1日(土)<br>
               </td>
               <td class="scheP">
                 <p>
-                  <s>稲武グリーンフェス</s>
+                  セントレア空港音楽祭 Centrair Cool Jazz Festival
                 </p>
               </td>
             </tr>
@@ -77,11 +76,11 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                <s>10月16日(土)</s><br>
+                9月7日(水)<br>
               </td>
               <td class="scheP">
                 <p>
-                  <s>Joint LIVE 2021</s>
+                  Summer Concert 2022
                 </p>
               </td>
             </tr>
@@ -89,50 +88,11 @@
             <!-- ここから -->
             <tr>
               <td class="scheDate">
-                11月14日(日)<br>
+                2023年2月26日(日)<br>
               </td>
               <td class="scheP">
                 <p>
-                <a href="https://youtu.be/bQX3oSxhb9k">セントレア空港音楽祭 Centrair Cool Jazz Festival</a><a href="./flyer/2021centrair.jpg">(flyer)</a>
-                </p>
-              </td>
-            </tr>
-            <!-- ここまでコピペ -->
-            <tr>
-              <td class="scheDate">
-                <s>11月21日(日)</s><br>
-              </td>
-              <td class="scheP">
-                <p>
-                  <s>東海大会</s>
-                </p>
-              </td>
-            </tr>
-            <!-- ここまでコピペ -->
-            <!-- ここから -->
-            <tr>
-              <td class="scheDate">
-                12月4日(土)<br>
-                
-              </td>
-              <td class="scheP">
-                <p>
-                  対バンvs.岐阜大学New Stars Jazz Orchestra<a href="./flyer/2021vsNSJO.jpg">(flyer)</a><br>
-                  Instagram LIVE<a href="https://instagram.com/edel_rote_j_o_?utm_medium=copy_link"> @edel_rote_j_o_</a>
-                  
-                </p>
-              </td>
-            </tr>
-            <!-- ここまでコピペ -->
-            <!-- ここから -->
-            <tr>
-              <td class="scheDate">
-                2月23日(水・祝)<br>
-              </td>
-              <td class="scheP">
-                <p>
-                  <a href="https://youtube.com/playlist?list=PLWuk9eAMjgfWvpdpTJIL1VnlGDmYnUYpw">第56回定期演奏会</a><a href="./flyer/2022teien.jpg">(flyer)</a><a href="./flyer/2022brochure.pdf">(brochure)</a><br>
-                  知多市勤労文化会館
+                  第57回定期演奏会
                 </p>
               </td>
             </tr>
@@ -144,6 +104,7 @@
         </div>
         <div class="oldSche">
           <h2 class="subText">過去の演奏会</h2>
+          <p class="schePast"><a href="2021.html">2021年度</a></p>
           <p class="schePast"><a href="2020.html">2020年度</a></p>
           <p class="schePast"><a href="2019.html">2019年度</a></p>
           <p class="schePast"><a href="2018.html">2018年度</a></p>
