--- a/members/members.html
+++ b/members/members.html
@@ -24,6 +24,7 @@
       <main class="main">
         <img src="IMG_2022members.JPG" class="topImage">
         <h2 class="topText">Members</h2>
+        <p class="memberPlofile"><a href="2023/index.html">2023年度(現役1年生)</a></p>
         <p class="memberPlofile"><a href="2022/index.html">2022年度(現役2年生)</a></p>
         <p class="memberPlofile"><a href="2021/index.html">2021年度(現役3年生)</a></p>
         <p class="memberPlofile"><a href="2020/index.html">2020年度</a></p>
