--- a/index.html
+++ b/index.html
@@ -70,6 +70,28 @@
                 2023/4/11
             </li><li class="infobun">
                 <!-- 内容 -->
+                membersを更新しました。<br>
+                たくさんの新入部員を迎え、一層賑やかになりました！
+                <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
+                <br></li>
+            <!--ここまでコピー-->
+               <!--ここからコピー-->
+              <li class="infodate">
+                <!-- 日付 -->
+                2023/8/10
+            </li><li class="infobun">
+                <!-- 内容 -->
+                scheduleを更新しました。<br>
+                summer concertの詳細は公式SNSをご確認ください。
+                <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
+                <br></li>
+            <!--ここまでコピー-->
+               <!--ここからコピー-->
+              <li class="infodate">
+                <!-- 日付 -->
+                2023/4/11
+            </li><li class="infobun">
+                <!-- 内容 -->
                 scheduleを更新しました。<br>
                 楽器体験や合奏見学を受け付けています。<br>
                 詳しくは公式twitterをご確認ください。
