--- a/members/members.html
+++ b/members/members.html
@@ -27,6 +27,7 @@
         <p class="memberPlofile"><a href="2023/index.html">2023年度(現役1年生)</a></p>
         <p class="memberPlofile"><a href="2022/index.html">2022年度(現役2年生)</a></p>
         <p class="memberPlofile"><a href="2021/index.html">2021年度(現役3年生)</a></p>
+        <!-- OB and OG
         <p class="memberPlofile"><a href="2020/index.html">2020年度</a></p>
         <p class="memberPlofile"><a href="2019/index.html">2019年度</a></p>
         <p class="memberPlofile"><a href="2018/index2.html">2018年度</a></p>
@@ -54,7 +55,7 @@
         <p class="memberPlofile"><a href="1996/96top.html">1996年度</a></p>
         <p class="memberPlofile"><span style="color: gray;">1995年度</span></p>
         <p class="memberPlofile"><a href="1994/94top.html">1994年度</a></p>
-
+        -->
         <div class="back"><p><a href="../index.html">戻る</a></p></div>
       </main>
 
