--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -133,6 +133,114 @@
               </td>
             </tr>
             <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                9月16日(土)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                  メイカーズピアジャズフェスタ ＠メイカーズピア
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                9月18日(月)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                  今池ビッグバンドフェスティバル ＠今池ガスホール
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                10月7日(土)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                  対バンvs.中部大学Natural Sounds Orchestra, 愛知学院大学Singing All Stars ＠南文化小劇場
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                11月11日(土)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                  市大祭 ＠名古屋市立大学滝子キャンパス
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                11月18日(土)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                  Basie祭 ＠クラブ月世界
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                11月25日(土)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                  Jazz Junk Workshop 駒場祭2023 ＠東京大学駒場キャンパス
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                12月2日(土)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                  対バンvs.愛知大学Blue Stars Jazz Orchestra ＠西文化小劇場
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                12月9日(土)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                  対バンvs 岐阜大学New Stars Jazz Orchestra ＠中村文化小劇場
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
+            <!-- ここから -->
+            <tr>
+              <td class="scheDate">
+                2024年2月17日(土)<br>
+              </td>
+              <td class="scheP">
+                <p>
+                   第58回定期演奏会 ＠今池ガスホール
+                </p>
+              </td>
+            </tr>
+            <!-- ここまでコピペ -->
             
             
             </tr>
