--- a/index.html
+++ b/index.html
@@ -63,7 +63,17 @@
           <div class="info1">
           <div class="info1list">
               <ul class="info1all">
-              
+
+              <!--ここからコピー-->
+              <li class="infodate">
+                <!-- 日付 -->
+                2024/4/3
+            </li><li class="infobun">
+                <!-- 内容 -->
+                scheduleを更新しました。
+                <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
+                <br></li>
+            <!--ここまでコピー-->
               <!--ここからコピー-->
               <li class="infodate">
                 <!-- 日付 -->
