--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -249,6 +249,7 @@
         </div>
         <div class="oldSche">
           <h2 class="subText">過去の演奏会</h2>
+          <p class="schePast"><a href="2023.html">2023年度</a></p> 
           <p class="schePast"><a href="2022.html">2022年度</a></p>
           <p class="schePast"><a href="2021.html">2021年度</a></p>
           <p class="schePast"><a href="2020.html">2020年度</a></p>
