--- a/schedule/2023.html
+++ b/schedule/2023.html
@@ -35,18 +35,18 @@
 				<th class="note-field">備考</th>
 			</tr>
 			<tr>
-				<td class="date-field">3月</td>
-				<td class="event-field">jazzの日<br></td>
+				<td class="date-field">4月15日(土),26日(水)</td>
+				<td class="event-field">新入生歓迎インスタライブ<br>@山の上音楽練習場<br></td>
 				<td class="note-field">-</td>
 			</tr>
 			<tr>
-				<td class="date-field">3/8(金) -<br>3/11(月)</td>
-				<td class="event-field">春合宿<br>@湯本館</td>
+				<td class="date-field">5月13日(土)</td>
+				<td class="event-field">津ぅのド真ん中jazzフェスティバル<br>＠津センターパレスホール</td>
 				<td class="note-field">-</td>
 			</tr>
 			<tr>
-				<td class="date-field">4/3(水)<br>4/10(水)</td>
-				<td class="event-field">新入生歓迎ライブ<br>@山の上練習場<br>
+				<td class="date-field">6月10日(土)</td>
+				<td class="event-field">名大祭<br>@豊田講堂<br>
           18:00~</td>
 				<td class="note-field">-</td>
 			</tr>
