--- a/schedule/2023.html
+++ b/schedule/2023.html
@@ -46,8 +46,82 @@
 			</tr>
 			<tr>
 				<td class="date-field">6月10日(土)</td>
-				<td class="event-field">名大祭<br>@豊田講堂<br>
-          18:00~</td>
+				<td class="event-field">名大祭<br>@豊田講堂</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<th class="date-field">6月11日(日)</th>
+				<th class="event-field">Be Happy Jazz Festival<br>＠パティオ池鯉鮒</th>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<th class="date-field">7月2日(日)</th>
+				<th class="event-field">セントレア空港音楽祭 Centrair Cool Jazz Festival<br>＠中部国際空港</th>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">7月8日(土)</td>
+				<td class="event-field">対バンvs.立命館大学R.U.Swingin'Herd Jazz Ensemble <br>@元町ALWAYS</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">8月30,31日(火,水)</td>
+				<td class="event-field">YAMANO BIG BAND JAZZ CONTEST<br>@北とぴあ さくらホール</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">9月9,10日(金,土)</td>
+				<td class="event-field">国際ジャズオーケストラ・フェスティバル 〜ステラジャム〜<br>@河口湖ステラシアター</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">9月12日(火)</td>
+				<td class="event-field">Summer Concert2023<br>@東文化小劇場</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">9月16日(土)</td>
+				<td class="event-field">メイカーズピアジャズフェスタ<br>@メイカーズピア</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">9月18日(月)</td>
+				<td class="event-field">今池ビッグバンドフェスティバル<br>@今池ガスホール</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">10月7日(土)</td>
+				<td class="event-field">対バンvs.中部大学Natural Sounds Orchestra, 愛知学院大学Singing All Stars<br>@南文化小劇場</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">11月11日(土)</td>
+				<td class="event-field">市大祭<br>@名古屋市立大学滝子キャンパス</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">11月18日(土)</td>
+				<td class="event-field">Basie祭<br>@クラブ月世界</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">11月25日(土)</td>
+				<td class="event-field">Jazz Junk Workshop 駒場祭2023<br>@東京大学駒場キャンパス</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">12月2日(土)</td>
+				<td class="event-field">対バンvs.愛知大学Blue Stars Jazz Orchestra<br>@西文化小劇場</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">12月9日(土)</td>
+				<td class="event-field">対バンvs 岐阜大学New Stars Jazz Orchestra<br>@中村文化小劇場</td>
+				<td class="note-field">-</td>
+			</tr>
+			<tr>
+				<td class="date-field">2024年2月17日(土)</td>
+				<td class="event-field">第58回定期演奏会<br>@今池ガスホール</td>
 				<td class="note-field">-</td>
 			</tr>
 
