--- a/schedule/2023.html
+++ b/schedule/2023.html
@@ -26,7 +26,7 @@
 <body>
 		<!-- コンテンツフレーム本体 -->
 
-		<div class="subheading">2019年度活動予定</div>
+		<div class="subheading">2023年度活動予定</div>
 
 		<table class="schedule-table">
 			<tr>
@@ -51,12 +51,12 @@
 			</tr>
 			<tr>
 				<th class="date-field">6月11日(日)</th>
-				<th class="event-field">Be Happy Jazz Festival<br>＠パティオ池鯉鮒</th>
+				<td class="event-field">Be Happy Jazz Festival<br>＠パティオ池鯉鮒</td>
 				<td class="note-field">-</td>
 			</tr>
 			<tr>
 				<th class="date-field">7月2日(日)</th>
-				<th class="event-field">セントレア空港音楽祭 Centrair Cool Jazz Festival<br>＠中部国際空港</th>
+				<td class="event-field">セントレア空港音楽祭 Centrair Cool Jazz Festival<br>＠中部国際空港</td>
 				<td class="note-field">-</td>
 			</tr>
 			<tr>
