--- a/schedule/2023.html
+++ b/schedule/2023.html
@@ -50,12 +50,12 @@
 				<td class="note-field">-</td>
 			</tr>
 			<tr>
-				<th class="date-field">6月11日(日)</th>
+				<td class="date-field">6月11日(日)</td>
 				<td class="event-field">Be Happy Jazz Festival<br>＠パティオ池鯉鮒</td>
 				<td class="note-field">-</td>
 			</tr>
 			<tr>
-				<th class="date-field">7月2日(日)</th>
+				<td class="date-field">7月2日(日)</td>
 				<td class="event-field">セントレア空港音楽祭 Centrair Cool Jazz Festival<br>＠中部国際空港</td>
 				<td class="note-field">-</td>
 			</tr>
