--- a/schedule/2023.html
+++ b/schedule/2023.html
@@ -1,153 +1,134 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
- "http://www.w3.org/TR/html4/loose.dtd">
+		  "http://www.w3.org/TR/html4/loose.dtd">
 
 <html>
 
 <head>
-  <!-- 文字化け防止 -->
-  <meta charset = "UTF-8" />
-  <!-- アイコン -->
-  <link rel="shortcut icon" href="../../image/erjo.png" type="image/png">
-<!-- 外部スタイルシートの読み込み -->
-<link rel="stylesheet" type="text/css" href="../css/common.css">
+	<!-- 文字化け防止 -->
+	<meta charset="UTF-8" />
+	<!-- アイコン -->
+	<link rel="shortcut icon" href="../../image/erjo.png" type="image/png">
+	<!-- 外部スタイルシートの読み込み -->
+	<link rel="stylesheet" type="text/css" href="../css/common.css">
 
-<!-- 文字コードの設定 -->
-<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
-<!-- 基準スタイルシート言語の設定 -->
-<meta http-equiv="Content-Style-Type" content="text/css">
-<!-- 基準スクリプト言語の設定 -->
-<meta http-equiv="Content-Script-Type" content="text/javascript">
+	<!-- 文字コードの設定 -->
+	<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+	<!-- 基準スタイルシート言語の設定 -->
+	<meta http-equiv="Content-Style-Type" content="text/css">
+	<!-- 基準スクリプト言語の設定 -->
+	<meta http-equiv="Content-Script-Type" content="text/javascript">
 
-<!-- タイトル -->
-<title>え～でるのHP</title>
+	<!-- タイトル -->
+	<title>え～でるのHP</title>
 
 </head>
 
 <body>
-		<!-- コンテンツフレーム本体 -->
+	<!-- コンテンツフレーム本体 -->
 
-		<div class="subheading">2023年度活動予定</div>
+	<div class="subheading">2023年度活動予定</div>
 
-		<table class="schedule-table">
-			<tr>
-				<th class="date-field">日程</th>
-				<th class="event-field">イベント名＠場所</th>
-				<th class="note-field">備考</th>
-			</tr>
-			<tr>
-				<td class="date-field">4月15日(土),26日(水)</td>
-				<td class="event-field">新入生歓迎インスタライブ<br>@山の上音楽練習場<br></td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">5月13日(土)</td>
-				<td class="event-field">津ぅのド真ん中jazzフェスティバル<br>＠津センターパレスホール</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">6月10日(土)</td>
-				<td class="event-field">名大祭<br>@豊田講堂</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">6月11日(日)</td>
-				<td class="event-field">Be Happy Jazz Festival<br>＠パティオ池鯉鮒</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">7月2日(日)</td>
-				<td class="event-field">セントレア空港音楽祭 Centrair Cool Jazz Festival<br>＠中部国際空港</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">7月8日(土)</td>
-				<td class="event-field">対バンvs.立命館大学R.U.Swingin'Herd Jazz Ensemble <br>@元町ALWAYS</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">8月30,31日(火,水)</td>
-				<td class="event-field">YAMANO BIG BAND JAZZ CONTEST<br>@北とぴあ さくらホール</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">9月9,10日(金,土)</td>
-				<td class="event-field">国際ジャズオーケストラ・フェスティバル 〜ステラジャム〜<br>@河口湖ステラシアター</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">9月12日(火)</td>
-				<td class="event-field">Summer Concert2023<br>@東文化小劇場</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">9月16日(土)</td>
-				<td class="event-field">メイカーズピアジャズフェスタ<br>@メイカーズピア</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">9月18日(月)</td>
-				<td class="event-field">今池ビッグバンドフェスティバル<br>@今池ガスホール</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">10月7日(土)</td>
-				<td class="event-field">対バンvs.中部大学Natural Sounds Orchestra, 愛知学院大学Singing All Stars<br>@南文化小劇場</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">11月11日(土)</td>
-				<td class="event-field">市大祭<br>@名古屋市立大学滝子キャンパス</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">11月18日(土)</td>
-				<td class="event-field">Basie祭<br>@クラブ月世界</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">11月25日(土)</td>
-				<td class="event-field">Jazz Junk Workshop 駒場祭2023<br>@東京大学駒場キャンパス</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">12月2日(土)</td>
-				<td class="event-field">対バンvs.愛知大学Blue Stars Jazz Orchestra<br>@西文化小劇場</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">12月9日(土)</td>
-				<td class="event-field">対バンvs 岐阜大学New Stars Jazz Orchestra<br>@中村文化小劇場</td>
-				<td class="note-field">-</td>
-			</tr>
-			<tr>
-				<td class="date-field">2024年2月17日(土)</td>
-				<td class="event-field">第58回定期演奏会<br>@今池ガスホール</td>
-				<td class="note-field">-</td>
-			</tr>
+	<table class="schedule-table">
+		<tr>
+			<th class="date-field">日程</th>
+			<th class="event-field">イベント名＠場所</th>
+			<th class="note-field">備考</th>
+		</tr>
+		<tr>
+			<td class="date-field">4月15日(土),26日(水)</td>
+			<td class="event-field">新入生歓迎インスタライブ<br>@山の上音楽練習場<br></td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">5月13日(土)</td>
+			<td class="event-field">津ぅのド真ん中jazzフェスティバル<br>＠津センターパレスホール</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">6月10日(土)</td>
+			<td class="event-field">名大祭<br>@豊田講堂</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">6月11日(日)</td>
+			<td class="event-field">Be Happy Jazz Festival<br>＠パティオ池鯉鮒</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">7月2日(日)</td>
+			<td class="event-field">セントレア空港音楽祭 Centrair Cool Jazz Festival<br>＠中部国際空港</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">7月8日(土)</td>
+			<td class="event-field">対バンvs.立命館大学R.U.Swingin'Herd Jazz Ensemble <br>@元町ALWAYS</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">8月30,31日(火,水)</td>
+			<td class="event-field">YAMANO BIG BAND JAZZ CONTEST<br>@北とぴあ さくらホール</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">9月9,10日(金,土)</td>
+			<td class="event-field">国際ジャズオーケストラ・フェスティバル 〜ステラジャム〜<br>@河口湖ステラシアター</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">9月12日(火)</td>
+			<td class="event-field">Summer Concert2023<br>@東文化小劇場</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">9月16日(土)</td>
+			<td class="event-field">メイカーズピアジャズフェスタ<br>@メイカーズピア</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">9月18日(月)</td>
+			<td class="event-field">今池ビッグバンドフェスティバル<br>@今池ガスホール</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">10月7日(土)</td>
+			<td class="event-field">対バンvs.中部大学Natural Sounds Orchestra, 愛知学院大学Singing All Stars<br>@南文化小劇場</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">11月11日(土)</td>
+			<td class="event-field">市大祭<br>@名古屋市立大学滝子キャンパス</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">11月18日(土)</td>
+			<td class="event-field">Basie祭<br>@クラブ月世界</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">11月25日(土)</td>
+			<td class="event-field">Jazz Junk Workshop 駒場祭2023<br>@東京大学駒場キャンパス</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">12月2日(土)</td>
+			<td class="event-field">対バンvs.愛知大学Blue Stars Jazz Orchestra<br>@西文化小劇場</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">12月9日(土)</td>
+			<td class="event-field">対バンvs 岐阜大学New Stars Jazz Orchestra<br>@中村文化小劇場</td>
+			<td class="note-field">-</td>
+		</tr>
+		<tr>
+			<td class="date-field">2024年2月17日(土)</td>
+			<td class="event-field">第58回定期演奏会<br>@今池ガスホール</td>
+			<td class="note-field">-</td>
+		</tr>
 
-		</table>
+	</table>
 
-		<br>
-<!--
-		<div class="subheading">過去の活動予定</div>
 
-		<ul>
-      <li><a href="2018.html">2018年度</a>
-  		<li><a href="2017.html">2017年度</a>
-  		<li><a href="2016.html">2016年度</a>
-  		<li><a href="2015.html">2015年度</a>
-  		<li><a href="2014.html">2014年度</a>
-  		<li><a href="2013.html">2013年度</a>
-  		<li><a href="2012.html">2012年度</a>
-  		<li><a href="2011.html">2011年度</a>
-  		<li><a href="2010.html">2010年度</a>
-  		<li><a href="2009.html">2009年度</a>
-  		<li><a href="2008.html">2008年度</a>
-  		<li><a href="2007.html">2007年度</a>
-  		<li><a href="2006.html">2006年度</a>
-  		<li><a href="2006.html">2005年度</a>
-		</ul> -->
-
+	<p><a href="./schedule.html">Back</a></p>
 </body>
 
 </html>
