--- a/about/about.html
+++ b/about/about.html
@@ -33,23 +33,23 @@
               ビッグバンドとは大人数のジャズバンドのことです。
             </p>
             <p>
-              え～でるの基本構成はサックス５人、トロンボーン４人、トランペット５人、ベース・ドラムス・ギター・ピアノ各１人です。
+              え～でるの基本構成はサックス５人、トロンボーン４人、トランペット４人、ベース・ドラムス・ギター・ピアノ各１人です。
             </p>
             <p>
-              18人による演奏はとても迫力があり、ビッグバンドジャズはアドリブソロやダイナミックなアンサンブルなど聴き所も多くあります。<br>
+              17人による演奏はとても迫力があり、ビッグバンドジャズはアドリブソロやダイナミックなアンサンブルなど聴き所も多くあります。<br>
               各自の表現の自由度も高く、団体の中にあっても生かしていけると思います。<br>
               ビッグバンドってよく分からないという人も大丈夫、先輩が色々教えてくれます。<br>
               ジャズというと難解で堅苦しい印象があるかもしれません（決してそう言った面は否定しません）が、それだけにやりがいもあり、慣れていくにつれ個人個人それぞれの楽しみ方も見つけることが出来ると思います。<br>
               またバンド練習には当然ある種の緊張感が求められますが、普段は楽しくやっていて堅苦しい雰囲気はあまりありません。
             </p>
             <p>
-              興味がある方は練習時間に気軽に遊びに来てください。<a href="mailto:edel_rote_jazz_orchester@yahoo.co.jp"  target="_blank" class="mail">メール</a>でのお問い合わせも随時受け付けています。
+              興味がある方は練習時間に気軽に遊びに来てください。<a href="mailto:edelrotejazzorchester@gmail.com"  target="_blank" class="mail">メール</a>でのお問い合わせも随時受け付けています。
             </p>
           </div>
           <div class="linkD aboutDate">
             <h3>練習日程</h3>
             <p>
-              毎週水曜16時30分～19時30分と土曜15時30分～19時30分です。この他にも夏と春には約１週間の合宿があります。
+              毎週火曜・水曜・土曜の15時30分～19時30分です。この他にも夏には約１週間、春には4日ほどの合宿があります。
             </p>
           </div>
           <div class="linkD aboutPlace">
@@ -66,7 +66,7 @@
           </div>
           <div class="contactP">
             <p>
-              また演奏依頼について詳しくは、<a href="mailto:edel_rote_jazz_orchester@yahoo.co.jp"  target="_blank" class="mail">E-mail:こちら</a>からご連絡ください。
+              また演奏依頼について詳しくは、<a href="mailto:edelrotejazzorchester@gmail.com"  target="_blank" class="mail">E-mail:こちら</a>からご連絡ください。
             </p>
           </div>
         </div>
