--- a/contact/contact.html
+++ b/contact/contact.html
@@ -29,7 +29,7 @@
             Edel Röte Jazz Orchesterでは様々なイベントでの演奏の依頼を承っております。<br>
             演奏依頼やHPに関するお問い合わせ、その他のお問い合わせは下記のアドレスにて受け付けております。
           </p>
-          <p>E-mail : <a href="mailto:edel_rote_jazz_orchester@yahoo.co.jp">edel_rote_jazz_orchester@yahoo.co.jp</a></p>
+          <p>E-mail : <a href="mailto:edelrotejazzorchester@gmail.com">edelrotejazzorchester@gmail.com</a></p>
         </div>
         <div class="back"><p><a href="../index.html">戻る</a></p></div>
       </main>
