--- a/headerfooter2/footer.html
+++ b/headerfooter2/footer.html
@@ -3,7 +3,7 @@
   <div class="contact">
     <ul class="footerUl">
       <li class="footerLi">
-        <a href="mailto:edel_rote_jazz_orchester@yahoo.co.jp"  target="_blank" class="footerLink">E-mail</a>
+        <a href="mailto:edelrotejazzorchester@gmail.com"  target="_blank" class="footerLink">E-mail</a>
       </li>
       <li class="footerLi">
         <a href="https://ameblo.jp/edel-jazz/" target="_blank" class="footerLink">Report</a>
