--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
       <div class="profile">
         <h2 class="topText">Profile</h2>
-        <img src="image/2023Top1.jpeg" class="topImage">
+        <img src="image/2024Top1.jpg" class="topImage">
         <div class="ploD">
           <p class="ploP">
             私たちEdel Röte Jazz Orchester（通称：え～でる）は名古屋大学軽音楽部ジャズセクションに所属する団体で、ビッグバンド形態のジャズの演奏を中心として活動しています。<br>
