--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
                   <!--ここからコピー-->
                   <li class="infodate">
                       <!-- 日付 -->
+                      2024/7/3
+                  </li>
+                  <li class="infobun">
+                      <!-- 内容 -->
+                      membersを更新しました。<br>
+                      たくさんの新入部員を迎え、一層賑やかになりました！
+                      <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
+                      <br>
+                  </li>
+                  <!--ここまでコピー-->
+                  <!--ここからコピー-->
+                  <li class="infodate">
+                      <!-- 日付 -->
                       2024/7/2
                   </li>
                   <li class="infobun">
