--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
                   </li>
                   <li class="infobun">
                       <!-- 内容 -->
+                      E-mailアドレスが変更されました。<br>
+                      お問い合わせは下記のアドレスにて受け付けております。<br>
+                      E-mail : <a href="mailto:edelrotejazzorchester@gmail.com">edelrotejazzorchester@gmail.com</a>
+                          <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
+                          <br>
+                  </li>
+                  <!--ここまでコピー-->
+                  <!--ここからコピー-->
+                  <li class="infodate">
+                      <!-- 日付 -->
+                      2024/7/3
+                  </li>
+                  <li class="infobun">
+                      <!-- 内容 -->
                       membersを更新しました。<br>
                       たくさんの新入部員を迎え、一層賑やかになりました！
                       <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
