--- a/index.html
+++ b/index.html
@@ -383,7 +383,9 @@
           <p class="ploP">
             私たちEdel Röte Jazz Orchester（通称：え～でる）は名古屋大学軽音楽部ジャズセクションに所属する団体で、ビッグバンド形態のジャズの演奏を中心として活動しています。<br>
             練習は真面目に楽しくやっています。<br>
-            興味がある方は気軽に練習やイベントに遊びに来てください！
+            興味がある方は気軽に練習やイベントに遊びに来てください！<br>
+            現在え～でるではTrumpetパートを大募集しています。<br>
+            少しでも興味のある方はE-mailや各種SNSからご連絡をお待ちしております！
           </p>
           <a href="about/about.html" class="ploA">About Us</a>
         </div>
